# mediapipe-rs-demos

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yaml
crates/audio/audio-classification/: Cargo.toml
crates/audio/audio-classification-ffmpeg/: Cargo.toml
crates/audio/audio-classification-ffmpeg/.cargo/: config.toml
crates/audio/audio-classification-ffmpeg/src/: main.rs
crates/audio/audio-classification/src/: main.rs
crates/text/text-classification/: Cargo.toml
crates/text/text-classification/src/: main.rs
crates/vision/face-detection/: Cargo.toml
crates/vision/face-detection/src/: main.rs
crates/vision/gesture-recognition/: Cargo.toml
crates/vision/gesture-recognition/src/: main.rs
crates/vision/hand-landmark-detection/: Cargo.toml
crates/vision/hand-landmark-detection/src/: main.rs
crates/vision/image-classification/: Cargo.toml
crates/vision/image-classification-ffmpeg/: Cargo.toml
crates/vision/image-classification-ffmpeg/src/: main.rs
crates/vision/image-classification/src/: main.rs
crates/vision/image-embedding/: Cargo.toml
crates/vision/image-embedding/src/: main.rs
crates/vision/image-segmentation/: Cargo.toml
crates/vision/image-segmentation/src/: main.rs
crates/vision/object-detection/: Cargo.toml
crates/vision/object-detection/src/: main.rs
data/: README.md
scripts/: download-ffmpeg-deps.sh  ffmpeg-cargo-env.sh  wasmedge-runner.sh
