[package]
name = "audio-classification-ffmpeg"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }

[dependencies.mediapipe-rs]
git = "https://github.com/yanghaku/mediapipe-rs.git"
branch = "main"
default-features = false
features = ["audio", "ffmpeg"]
