[package]
name = "image-segmentation"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0"
imageproc = "0"
rusttype = "0"

[dependencies.mediapipe-rs]
git = "https://github.com/yanghaku/mediapipe-rs.git"
branch = "main"
default-features = false
features = ["vision"]
